--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="nav_menu" id="nav-menu">
             <ul class="nav_list">
                 <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">About</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Gallery</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Contact</a></li>
             </ul>
         </div>
         <div class="nav_toggle" id="nav-toggle">
